--- a/package.json
+++ b/package.json
@@ -1,19 +1,17 @@
 {
-  "name": "minhanh",
+  "name": "example-create-react-app-express",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "server": "node index.js",
-    "client": "npm run start --prefix client",
-    "dev": "concurrently \"npm run server\" \"npm run client\""
+    "client": "cd client && yarn start",
+    "server": "nodemon server.js",
+    "dev": "concurrently --kill-others-on-fail \"yarn server\" \"yarn client\""
   },
-  "keywords": [],
-  "author": "kntrieuit",
-  "license": "ISC",
   "dependencies": {
-    "concurrently": "^5.2.0",
-    "express": "^4.17.1"
+    "body-parser": "^1.18.3",
+    "express": "^4.16.4",
+    "nodemon": "^2.0.3"
+  },
+  "devDependencies": {
+    "concurrently": "^4.0.1"
   }
 }
